--- a/VipCoin/Views/Home/About.cshtml
+++ b/VipCoin/Views/Home/About.cshtml
@@ -4,4 +4,4 @@
 
 
 
-<h5>Программа выводит сведения о криптовалютах</h5>
+<h5>Программа выводит сведения о криптовалютах. Узнавай, о стоимости криптовалют, капитализации.</h5>
